# cmail

./: .gitignore  CMakeLists.txt  README.md  config.example.json
lib/mailio/0.18.0/arch_x64/: export.hpp
src/: CMakeLists.txt  Email.hpp  Header.hpp  ImapClient.cpp  ImapClient.hpp  ImapStatusCode.hpp  MailSummary.hpp  main.cpp
src/imap/: CMakeLists.txt  Command.hpp  CommandBuilder.cpp  CommandBuilder.hpp  Connection.cpp  Connection.hpp  Response.hpp  connection.cpp  connection.hpp
